--- a/index.html
+++ b/index.html
@@ -46,18 +46,55 @@
                     <button class="nav-lists">Support</button>
                     <button class="nav-lists">Download</button>
                     <div class="side-divider"></div>
-                    <a href="#">
-                        <span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 dYnaPI e-9541-icon" viewBox="0 0 16 16"><path d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"></path><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"></path></svg></span>
-                        <span>Install App</span>
+                    <a href="#" class="install-container">
+                        <span class="install-icon"><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 dYnaPI e-9541-icon" viewBox="0 0 16 16"><path d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"></path><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"></path></svg></span>
+                        <span class="install-text">Install App</span>
                     </a>
                     <div class="login-container">
-                        <button class="signup-button">Sign</button>
-                        <button class="login-button"><span>Log in</span></button>
+                        <button class="signup-button">Sign up</button>
+                        <div><button class="login-button"><span>Log in</span></button></div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="main-wrap-content">
+            <!-- for laptop-view -->
+             <!-- on work -->
+            <div class="left-sidebar-container">
+                <div class="left-sidebar">
+                    <div class="main-left-content-container">
+                        <div class="library-container">
+                            <div class="library-content">
+                                <div class="library-text-icon-container">
+                                    <div class="library-icon"><span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE e-9541-icon" viewBox="0 0 24 24"><path d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path></svg></span></div>
+                                    <div class="library-text"><span>Your Library</span></div>
+                                </div>
+                                <div class="plus-icon"><span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 dYnaPI e-9541-icon" viewBox="0 0 16 16"><path d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"></path></svg></span></div>
+                            </div>
+                        </div>
+                        <div class="left-sidebar-content">
+                            <div class="sidebar-content-container">
+                                <section class="sidebar-content-box">
+                                    <div class="sidebar-content-head">
+                                        <div class="sidebar-head">Create your first playlist</div>
+                                        <div class="sidebar-text">It's easy, we'll help you</div>
+                                    </div>
+                                    <button class="sidebar-button"><span>Create playlist</span></button>
+                                </section>
+                                <section class="sidebar-content-box">
+                                    <div class="sidebar-content-head">
+                                        <div class="sidebar-head">Let's find some podcasts to follow</div>
+                                        <div class="sidebar-text">We'll keep you updated on new episodes</div>
+                                    </div>
+                                    <button class="sidebar-button"><span>Browse podcasts</span></button>
+                                </section>
+                                <div class="for-space"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end -->
             <div class="main-content-container">
                 <div class="content-container">
                     <div class="content-block-container">
