--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="main-wrap1">
     <div class="main-wrap">
         <div class="main-wrap-nav">
             <div class="nav-container">
@@ -63,6 +64,7 @@
             <div class="left-sidebar-container">
                 <div class="left-sidebar">
                     <div class="main-left-content-container">
+                        <div>
                         <div class="library-container">
                             <div class="library-content">
                                 <div class="library-text-icon-container">
@@ -79,17 +81,42 @@
                                         <div class="sidebar-head">Create your first playlist</div>
                                         <div class="sidebar-text">It's easy, we'll help you</div>
                                     </div>
-                                    <button class="sidebar-button"><span>Create playlist</span></button>
+                                    <div class="login-container" id="sidebar-button">
+                                        <button class="login-button"><span>Create playlist</span></button>
+                                    </div>
                                 </section>
                                 <section class="sidebar-content-box">
                                     <div class="sidebar-content-head">
                                         <div class="sidebar-head">Let's find some podcasts to follow</div>
                                         <div class="sidebar-text">We'll keep you updated on new episodes</div>
                                     </div>
-                                    <button class="sidebar-button"><span>Browse podcasts</span></button>
+                                    <div class="login-container" id="sidebar-button">
+                                        <button class="login-button"><span>Browse podcasts</span></button>
+                                    </div>
                                 </section>
                                 <div class="for-space"></div>
                             </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sidebar-bottom-container">
+                    <div class="footer-bottom-container" id="sidebar-bottom">
+                        <div class="footer-bottom-content">
+                            <div class="footer-bottom-links">
+                                <div class="bottom-links"><a href="#"><span>Legal</span></a></div>
+                                <div class="bottom-links"><a href="#"><span>Safety & Privacy Center</span></a></div>
+                                <div class="bottom-links"><a href="#"><span>Privacy Policy</span></a></div>
+                                <div class="bottom-links"><a href="#"><span>Cookies</span></a></div>
+                                <div class="bottom-links"><a href="#"><span>About Ads</span></a></div>
+                                <div class="bottom-links"><a href="#"><span>Accessibility</span></a></div>
+                            </div>
+                        </div>
+                        <div class="spotify25-container"><p>Cookies</p></div>
+                        <div class="language-selection-container">
+                            <button class="language-cont"><span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 dYnaPI e-9541-icon" viewBox="0 0 16 16"><path d="M8.152 16H8a8 8 0 1 1 .152 0zm-.41-14.202c-.226.273-.463.713-.677 1.323-.369 1.055-.626 2.496-.687 4.129h3.547c-.06-1.633-.318-3.074-.687-4.129-.213-.61-.45-1.05-.676-1.323-.194-.235-.326-.285-.385-.296h-.044c-.055.007-.19.052-.391.296zM4.877 7.25c.062-1.771.34-3.386.773-4.624.099-.284.208-.554.329-.806a6.507 6.507 0 0 0-4.436 5.43h3.334zm-3.334 1.5a6.507 6.507 0 0 0 4.436 5.43 7.974 7.974 0 0 1-.33-.806c-.433-1.238-.71-2.853-.772-4.624H1.543zm4.835 0c.061 1.633.318 3.074.687 4.129.214.61.451 1.05.677 1.323.202.244.336.29.391.297l.044-.001c.06-.01.19-.061.385-.296.226-.273.463-.713.676-1.323.37-1.055.626-2.496.687-4.129H6.378zm5.048 0c-.061 1.771-.339 3.386-.772 4.624-.082.235-.171.46-.268.674a6.506 6.506 0 0 0 4.071-5.298h-3.03zm3.031-1.5a6.507 6.507 0 0 0-4.071-5.298c.097.214.186.44.268.674.433 1.238.711 2.853.772 4.624h3.031z"></path></svg></span>
+                                <span class="text">English</span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -494,6 +521,20 @@
                 </footer>
             </div>
         </div>
+        <div class="main-site-footer">
+            <div class="site-footer-container">
+                <div class="site-footer">
+                    <div class="site-footer-text-container">
+                        <div class="site-footer-head"><p>Preview of Spotify</p></div>
+                        <div class="site-footer-text"><p>Sign up to get unlimited songs and podcasts with occasional ads. No credit card needed.</p></div>
+                    </div>
+                    <div class="login-container" id="site-footer-button">
+                        <button class="login-button"><span>Sign up free</span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
