--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
                                         <button class="home-button" id="lap-search">
                                             <span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE e-9541-icon" viewBox="0 0 24 24"><path d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z"></path></svg></span>
                                         </button>
-                                        <div class="input-outer-container">
-                                            <div class="input-inner-container"><span>What do you want to play?</span></div>
-                                        </div>
+                                        <span class="input-text">What do you want to play?</span>
                                         <div class="side-divider" id="lap-l-divider"></div>
-                                        <button class="home-button" id="lap-search">
+                                        <button class="home-button" id="lap-search1">
                                             <span><svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE e-9541-icon" viewBox="0 0 24 24"><path d="M15 15.5c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2z"></path><path d="M1.513 9.37A1 1 0 0 1 2.291 9h19.418a1 1 0 0 1 .979 1.208l-2.339 11a1 1 0 0 1-.978.792H4.63a1 1 0 0 1-.978-.792l-2.339-11a1 1 0 0 1 .201-.837zM3.525 11l1.913 9h13.123l1.913-9H3.525zM4 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v4h-2V3H6v3H4V2z"></path></svg></span>
                                         </button>
                                     </div>
@@ -172,28 +170,33 @@
                                         <div class="box-text">Artist</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box4">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616100005174b69f6182a27407318b632a5f" alt="Pritham"></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Sachin-Jigar</span></a></div>
                                         <div class="box-text">Artist</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box5">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab6761610000517490b6c3d093f9b02aad628eaf" alt="Pritham"></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Vishal-Shekhar</span></a></div>
                                         <div class="box-text">Artist</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box">
+                                    <div class="suggession-box" id="suggession-box4">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616100005174c40600e02356cc86f0debe84" alt="Pritham"></div>
+                                        <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Atif Aslam</span></a></div>
                                         <div class="box-text">Artist</div>
+                                        </div>
                                     </div>
                                     <div class="suggession-box">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab676161000051740f0be2054fe9594026a6b843" alt="Pritham"></div>
+                                        <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Anirudh Ravichander</span></a></div>
+                                        <div class="box-text" id="l-box-text">Artist</div>
+                                        </div>
                                     </div>
                                     <div class="suggession-box">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616100005174d65723b2f4cf4d47f62a9f89" alt="Pritham"></div>
@@ -278,18 +281,21 @@
                                         <div class="box-text">Pritham</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box4">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616d00001e027f35adfbec3bb2bc8256802b" alt=""></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Who (Remixes)</span></a></div>
                                         <div class="box-text">Jimin</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box5">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616d00001e0279f4a87c23143f0abb14c279" alt=""></div>
-                                        <div class="box-head"><a href="#"><span>Mismatched:Season 3 (Soundtrack from the Netflix Series)</span></a></div>
+                                        <div class="box-des">
+                                        <div class="box-head"><a href="#"><span>Mismatched: Season 3 (Soundtrack from the Netflix Series)</span></a></div>
+                                        <div class="box-text">Mismatched - Cast</div>
+                                        </div>
                                     </div>
-                                    <div class="suggession-box">
+                                    <div class="suggession-box" id="suggession-box4">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67616d00001e02bb25239324c4e16ae01fda36" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Making Memories</span></a></div>
                                     </div>
@@ -379,21 +385,21 @@
                                         <div class="box-text">With Vishal-Shekhar, Atif Aslam, A.R. Rahman</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box4">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://pickasso.spotifycdn.com/image/ab67c0de0000deef/dt/v1/img/radio/artist/2FKWNmZWDBZR4dE5KX4plR/en" alt="Pritham"></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Diljit Dosanjh Radio</span></a></div>
                                         <div class="box-text">With Shubh, Karan Aujila, Sidhu Moosetape</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box5">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://pickasso.spotifycdn.com/image/ab67c0de0000deef/dt/v1/img/radio/artist/4PULA4EFzYTrxYvOVlwpiQ/en" alt="Pritham"></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Sidhu Moosa Wala Radio</span></a></div>
                                         <div class="box-text">Yo Yo Honey Singh</div>
                                         </div>
                                     </div>
-                                    <div class="suggession-box">
+                                    <div class="suggession-box" id="suggession-box4">
                                         <div class="box-image"><img src="https://pickasso.spotifycdn.com/image/ab67c0de0000deef/dt/v1/img/radio/artist/4K6blSRoklNdpw4mzLxwfn/en" alt="Pritham"></div>
                                         <div class="box-des">
                                         <div class="box-head"><a href="#"><span>Kumar Sanu Radio</span></a></div>
@@ -483,7 +489,7 @@
                                         <div class="box-head"><a href="#"><span>Top 50 - India</span></a></div>
                                         <div class="box-text">Your weekly update of the most played tracks right now - Global.</div>
                                     </div>
-                                    <div class="suggession-box">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://charts-images.scdn.co/assets/locale_en/viral/daily/region_global_default.jpg" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Viral 50 - Global</span></a></div>
                                         <div class="box-text">Your weekly update of the most played tracks right now - Global.</div>
@@ -517,17 +523,17 @@
                                         <div class="box-head"><a href="#"><span>Bollywood Central</span></a></div>
                                         <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box4">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f0000000241958ea71003a05cb3d7ccc3" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Punjabi 101</span></a></div>
                                         <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
                                     </div>
-                                    <div class="suggession-box" id="suggession-box5">
+                                    <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f000000024e1563387174f7a0c6b5e0ca" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Kollywood Cream</span></a></div>
                                         <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
                                     </div>
-                                    <div class="suggession-box">
+                                    <div class="suggession-box" id="suggession-box4">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f00000002dda381d6e4b5ebc246bada8a" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Tollywood Pearls</span></a></div>
                                     </div>
