--- a/index.html
+++ b/index.html
@@ -516,26 +516,27 @@
                                     <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f00000002bfdf6b7b6d0cd20979bd59b7" alt=""></div>
                                         <div class="box-head"><a href="#"><span>I-Pop Icons</span></a></div>
-                                        <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
+                                        <div class="box-text">Hottest tracks from your favourite I-Pop Icons. Cover- King</div>
                                     </div>
                                     <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f0000000213c0e9696b1b67551355fa64" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Bollywood Central</span></a></div>
-                                        <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
+                                        <div class="box-text">Bollywood Central, jab baje toh seedha dil ke centre mein lage 🫶🏼 Cover - Stree 2</div>
                                     </div>
                                     <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f0000000241958ea71003a05cb3d7ccc3" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Punjabi 101</span></a></div>
-                                        <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
+                                        <div class="box-text">Ultimate 101 Punjabi Hits with Shubh</div>
                                     </div>
                                     <div class="suggession-box" id="suggession-box3">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f000000024e1563387174f7a0c6b5e0ca" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Kollywood Cream</span></a></div>
-                                        <div class="box-text">Celebrate this day with your favorite Punjabi romantic tracks. Cover: Gurnam Bhullar &amp;  Hitika Bali</div>
+                                        <div class="box-text">Finest collection of Tamil Music from the past 10 years Cover : Amaran</div>
                                     </div>
                                     <div class="suggession-box" id="suggession-box4">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f00000002dda381d6e4b5ebc246bada8a" alt=""></div>
                                         <div class="box-head"><a href="#"><span>Tollywood Pearls</span></a></div>
+                                        <div class="box-text">The finest set of Telugu music from the past 10 years. Cover : Hi Nanna</div>
                                     </div>
                                     <div class="suggession-box">
                                         <div class="box-image"><img src="https://i.scdn.co/image/ab67706f00000002e2881c83b28f451044b0b8f7" alt=""></div>
